--- a/static/index.html
+++ b/static/index.html
@@ -34,7 +34,7 @@
   <div id="app">
     <div class="sidenav" id="navBox" style="display:none;">
       <section class="section">
-        <h1 class="title STYLE31">吃     鸡     云</h1>
+        <h1 class="title STYLE31">311指令【www.311zl.com】</h1>
 		<label class="label">一  切  都  在  我  的  掌  握  之  中</label>
 		<br>
         <!-- <div class="field is-grouped">
@@ -117,7 +117,7 @@
         <br>
 
         
-		        <p class="subtitle"><strong>交流群：618679680</strong></p>
+		        <p class="subtitle"><strong>QQ群：456369573</strong></p>
       </section>
 
     </div>
